# rust-utils

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md
.cargo/: config.toml
macros/: Cargo.toml
macros/.cargo/: config.toml
macros/src/: compose_struct.rs  for_each.rs  lib.rs  smart_for_each.rs  tokens.rs
src/: iterator.rs  lib.rs  logging.rs  macro_expansion.rs  misc.rs  nd.rs  numerics.rs  prelude.rs  tuples.rs
src/iterator/: chain.rs  extended_map.rs  misc.rs  mod.rs  product.rs  zip.rs
src/numerics/: basic_operations.rs  float.rs  mod.rs  primitive_function_extensions.rs  primitive_functions.rs  special_functions.rs
src/numerics/special_functions/: gamma_functions.rs  integer_coefficients.rs  mod.rs
